<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_test_page"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/primary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/accent"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:text="@string/subscriber"
                android:textColor="@color/white"
                android:textSize="@dimen/text_m"
                android:padding="@dimen/content_margin"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/edit_text_margin"
                android:layout_weight="3"
                android:gravity="center_vertical"
                android:background="@android:drawable/editbox_background_normal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:layout_gravity="center_vertical"
                    android:text="@string/topic"
                    android:textColor="@android:color/black" />

                <EditText
                    android:id="@+id/et_sub_topic"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:background="@null"
                    android:layout_marginStart="@dimen/content_margin"
                    android:layout_marginLeft="@dimen/content_margin"
                    android:textColor="@color/success_dark"/>
                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">
                    <ImageView
                        android:visibility="gone"
                        android:id="@+id/iv_sub_status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/ok"/>
                    <ProgressBar
                        android:visibility="gone"
                        android:id="@+id/pb_set_sub_topic"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"/>
                </FrameLayout>

            </LinearLayout>

            <Button
                android:id="@+id/btn_sub_topic_ok"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/content_margin"
                android:layout_marginRight="@dimen/button_margin"
                android:gravity="center"
                android:layout_gravity="center"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/set"
                android:textColor="@android:color/white"/>

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_subscriber"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/edit_text_margin"
            android:background="@color/light_dark"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/accent"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:text="@string/publisher"
                android:textColor="@color/white"
                android:textSize="@dimen/text_m"
                android:padding="@dimen/content_margin"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/edit_text_margin"
                android:layout_weight="3"
                android:gravity="center_vertical"
                android:background="@android:drawable/editbox_background_normal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:layout_gravity="center_vertical"
                    android:text="@string/topic"
                    android:textColor="@android:color/black" />

                <EditText
                    android:id="@+id/et_pub_topic"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:background="@null"
                    android:layout_marginStart="@dimen/content_margin"
                    android:layout_marginLeft="@dimen/content_margin"
                    android:textColor="@color/success_dark" />
                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">
                    <ImageView
                        android:visibility="gone"
                        android:id="@+id/iv_pub_status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/ok"/>
                    <ProgressBar
                        android:visibility="gone"
                        android:id="@+id/pb_set_pub_topic"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"/>
                </FrameLayout>

            </LinearLayout>

            <Button
                android:id="@+id/btn_pub_topic_ok"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/content_margin"
                android:layout_marginRight="@dimen/button_margin"
                android:layout_gravity="center"
                android:backgroundTint="@color/colorPrimary"
                android:gravity="center"
                android:text="@string/set"
                android:textColor="@android:color/white" />

        </LinearLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_publisher"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/edit_text_margin"
            android:background="@color/light_dark"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/et_publish_msg"
            android:layout_width="0dp"
            android:layout_weight="5"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="@dimen/content_margin"
            android:background="@android:drawable/editbox_background_normal"/>
        <Button
            android:id="@+id/btn_publish"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/content_margin"
            android:layout_marginBottom="@dimen/content_margin"
            android:layout_marginEnd="@dimen/content_margin"
            android:layout_marginRight="@dimen/button_margin"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/send"
            android:textColor="@android:color/white"/>
    </LinearLayout>
</LinearLayout>